tests/fixtures/negative/exceptions/ExceptionRaisedInUnexpectedLocation.kt
package com.example.exceptions

class MyClass {

    override fun equals(other: Any?): Boolean {
        return this === other
    }

    override fun hashCode(): Int {
        return System.identityHashCode(this)
    }

    override fun toString(): String {
        return "MyClass"
    }
}
